--- a/package.json
+++ b/package.json
@@ -5,19 +5,40 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "build": "sagui build",
-    "dist": "sagui dist",
-    "start": "sagui develop --port 3000",
-    "test": "sagui test",
-    "test:lint": "sagui test:lint",
-    "test:typecheck": "sagui test:typecheck",
-    "test:unit": "sagui test:unit --coverage",
-    "test:unit:watch": "sagui test:unit --watch"
+    "dist": "NODE_ENV=production webpack -p --colors",
+    "start": "NODE_ENV=development webpack-dev-server --inline --hot",
+    "test": "npm run test:lint && npm run test:unit",
+    "test:lint": "eslint ./**/*.js",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watchAll"
   },
   "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-transform-react-jsx": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.26.1",
     "enzyme": "^2.7.1",
+    "eslint": "^3.16.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-config-standard-jsx": "^3.3.0",
+    "eslint-plugin-promise": "^3.4.2",
+    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.10.0",
+    "html-webpack-plugin": "^2.28.0",
+    "jest": "^19.0.0",
+    "postcss-loader": "^1.3.1",
+    "postcss-modules-values": "^1.2.2",
     "react-addons-test-utils": "^15.4.2",
-    "sagui": "^8.0.2"
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.9.0",
+    "webpack-dev-server": "^1.16.3"
   },
   "dependencies": {
     "react": "^15.4.2",
