--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "NODE_ENV=development webpack-dev-server --inline --hot",
     "test": "npm run test:lint && npm run test:unit",
     "test:lint": "eslint ./**/*.js",
-    "test:unit": "jest",
-    "test:unit:watch": "jest --watchAll"
+    "test:unit": "karma start karma.conf.js --single-run",
+    "test:unit:watch": "karma start karma.conf.js"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
@@ -25,13 +25,23 @@
     "eslint": "^3.16.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-config-standard-jsx": "^3.3.0",
+    "eslint-loader": "^1.6.2",
     "eslint-plugin-promise": "^3.4.2",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
-    "jest": "^19.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jasmine": "^2.5.3",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.5.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.2",
+    "phantomjs-prebuilt": "^2.1.14",
     "postcss-loader": "^1.3.1",
     "postcss-modules-values": "^1.2.2",
     "react-addons-test-utils": "^15.4.2",
