--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.3.2",
     "babel-plugin-transform-react-jsx": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
@@ -25,7 +26,6 @@
     "eslint": "^3.16.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-config-standard-jsx": "^3.3.0",
-    "eslint-loader": "^1.6.2",
     "eslint-plugin-promise": "^3.4.2",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.0.1",
