--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^6.2.2",
     "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-sagui": "6.6.1",
     "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.1",
@@ -32,15 +33,13 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.5.0",
-    "karma-jasmine": "^1.1.0",
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.2",
+    "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.14",
     "postcss-loader": "^1.3.1",
     "postcss-modules-values": "^1.2.2",
