--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
+    "karma-clear-screen-reporter": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
@@ -44,6 +46,7 @@
     "postcss-loader": "^1.3.1",
     "postcss-modules-values": "^1.2.2",
     "react-addons-test-utils": "^15.4.2",
+    "sinon": "beta",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.9.0",
